feat: Add comprehensive ML service, AI recommendations, workload management, and chat features
Major Features:
- Implemented ML service with Python FastAPI integration for task recommendations
- Added AI-powered CV analysis using Google Gemini
- Enhanced task assignment with hybrid recommendation algorithm
- Integrated workload management across services
- Improved chat functionality with message recall, pin, and edit features
- Added role-based conversation management for project chats

ML Service:
- Python ML service with hybrid recommender (Random Forest + SVD)
- Model training pipeline with continuous learning
- Multi-database data collection (MySQL, Neo4j, MongoDB, PostgreSQL)
- Model evaluation and performance tracking

AI Service:
- Gemini AI integration for CV analysis and task recommendations
- Dynamic skill threshold calculation
- Feature engineering service for ML predictions
- Skill embedding and normalization

Frontend:
- Enhanced team management interface
- Workload analytics dashboard
- AI task recommendation modal
- Chat page improvements with real-time updates
- Conversation info modal with role-based permissions

Testing:
- Comprehensive test cases covering all main features
- Test documentation for system validation

Note: Configuration files (application.yml) excluded from commit